2021-04-15 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Ask (once) for the correct interpretation of dots, when comma is decimal separator

2021-04-13 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Avoid whole window updates when expression entry state changes from empty to non-empty

2021-04-04 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Do not calculate expression immediately on completion if "to" expression requires addition input (e.g. "to base #")
	* Do not append degrees at end of sexagesimal output
	* Add support for new sexagesimal bases
	* Add sexagesimal and time format to "to" menu when appropriate

2021-03-20 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix keyboard focus when run hidden automatically at startup

2021-02-22 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* If system tray icon is enabled, clear expression when the main window is hidden, and hide the window when escape key is pressed and expression is empty

2021-02-15 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Show matrix result dialog when number of rows >= 3 (instead rows or columns >= 4), and set initial focus on cancel button

2021-02-06 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Always save keyboard shortcuts in the same order

2021-01-22 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add convert to mixed units to result context menu
	* Save chain mode setting

2021-01-16 tuberry <17917040+tuberry@users.noreply.github.com>

	* Add Simplified Chinese translation

2021-01-14 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add temperature calculation modes to preferences
	* Handle SIGTERM signal

2021-01-12 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Restore position when restoring window closed to system tray
	* Save mode/preferences and definitions before closing to system tray

2021-01-01 Hanna Knutsson <hanna.knutsson@protonmail.com>
