@@ -1,3 +1,8 @@
+2021-04-19 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Replace dark theme check box with combo box (with high contrast and default theme options added)
+	* Enable theme selection on all platforms
+
 2021-04-15 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Ask (once) for the correct interpretation of dots, when comma is decimal separator
